--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ Text Domain: construye-mundo
 Template: astra
 */
 
+.ast-archive-description .page-title {
+	color: #071a3c;
+}
+
 .ast-desktop .main-header-menu:not(#ast-hf-mobile-menu) .sub-menu {
 	box-shadow: 0 3px 6px -4px rgb(0 0 0 / 25%) inset;
 }
