--- a/style.css
+++ b/style.css
@@ -464,3 +464,99 @@ li.destacado .sub-arrow {
 #give_cc_address > legend {
 	display: none;
 }
+
+/* Gravity */
+.construye-forms_wrapper .gfield--type-honeypot,
+.construye-forms_wrapper .gform_validation_errors {
+	display: none;
+}
+
+.construye-forms_wrapper .gfield_label.gform-field-label {
+	display: none;
+}
+
+.construye-forms_wrapper .gform_heading {
+	display: none;
+}
+
+.construye-forms_wrapper .ginput_container input,
+.construye-forms_wrapper .ginput_container textarea {
+	width: 100%;
+	border-color: #e3e3e3 !important;
+	border-radius: 5px;
+	background: #f9f9f9;
+	box-shadow: none;
+	color: #606060;
+}
+
+.construye-forms_wrapper .ginput_container ::placeholder {
+	color: #afafaf;
+}
+
+.construye-forms_wrapper .gform-button {
+	width: 100%;
+	border-radius: 5px;
+	padding-inline: 0.8rem;
+	background: #638dbe;
+	font-weight: 500;
+	border: none;
+}
+
+.construye-forms_wrapper .gform-button:hover,
+.construye-forms_wrapper .gform-button:focus {
+	box-shadow: none;
+	opacity: 0.8;
+}
+
+.construye-forms_wrapper [id^="gform_ajax_spinner"] {
+	border-block-end-color: #5c88bb;
+	border-inline-start-color: #5c88bb;
+	position: absolute;
+	right: -2rem;
+	top: 10px;
+	opacity: 0.7;
+}
+
+.construye-forms_wrapper [id^="field_submit"] {
+	position: relative;
+}
+
+.construye-forms_wrapper [id^="field_submit"] input {
+	width: 100%;
+}
+
+/* Newsletter form */
+#gform_wrapper_1 #field_submit {
+	grid-column: span 3;
+}
+
+#gform_wrapper_1 #field_1_6 {
+	grid-column: span 5;
+}
+
+#gform_wrapper_1 .validation_message {
+	color: #e3e3e3 !important;
+}
+
+#gform_wrapper_1 #gform_submit_button_1 {
+	background: #638dbe;
+}
+
+/* Guia viajes form */
+#gform_wrapper_2 #field_submit {
+	grid-column: 6 / span 2;
+}
+
+#gform_wrapper_2 #gform_submit_button_2 {
+	background-color: #80c341;
+	font-weight: 700;
+	padding: 0.8rem 3rem;
+}
+
+#gform_wrapper_2 #gform_submit_button_2:hover {
+	background-color: #72af38 !important;
+}
+
+#gform_wrapper_2 #gform_fields_2 {
+	grid-row-gap: 1.5rem;
+}
