--- a/style.css
+++ b/style.css
@@ -10,16 +10,6 @@ Text Domain: construye-mundo
 Template: astra
 */
 
-/* #masthead .ast-container {
-	max-width: 1200px;
-}
-
-@media (max-width: 1200px) {
-	#masthead .ast-container {
-		max-width: 90vw;
-	}
-} */
-
 #secondary li {
 	line-height: 1.2 !important;
 	margin-bottom: 1rem !important;
@@ -498,26 +488,95 @@ li.destacado .sub-arrow {
 }
 
 /* Donation Form */
-.donation-form_wrapper .gfield-choice-input:checked + label {
-	color: red;
+.donation-form_wrapper .gform-field-label {
+	margin: 0;
 }
 
-.donation-form_wrapper #input_3_13 {
+.donation-form_wrapper .gchoice {
+	width: 100%;
+}
+
+.donation-form_wrapper .boxed label.gform-field-label {
+	font-weight: 700;
+	font-size: 2rem;
+	text-transform: uppercase;
+}
+
+.donation-form_wrapper .boxed .gfield_radio {
 	display: flex;
 	flex-direction: row;
 	flex-wrap: nowrap;
 	justify-content: space-between;
+	gap: 1rem;
 }
 
-.donation-form_wrapper #input_3_13 .gchoice {
-	width: 100%;
-	text-align: center;
-	padding: 1rem;
-	background: lightgray;
-	cursor: pointer;
+.donation-form_wrapper .boxed .gfield_radio .gchoice {
+	margin: 0 !important;
 	display: block;
 }
 
-.donation-form_wrapper #input_3_13 input {
+.donation-form_wrapper .boxed .gfield_radio input {
 	display: none;
+}
+
+.donation-form_wrapper .boxed .gfield_radio .gform-field-label {
+	padding: 1rem;
+	text-align: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	background: #e9e9e9;
+	color: #7b96a7;
+	cursor: pointer;
+}
+
+.donation-form_wrapper
+	.boxed
+	.gfield-choice-input:checked
+	+ .gform-field-label {
+	color: #11469f !important;
+}
+
+fieldset#field_3_3 {
+	grid-row: 1;
+	grid-column: 1 / -1;
+}
+
+div#field_3_4 {
+	grid-row: 1;
+	grid-column: -4 / -1;
+	/* background: #e9e9e9; */
+	/* padding: 1rem 2rem 10px; */
+}
+
+div#field_3_4 label {
+	/* justify-content: center; */
+	/* color: #7b96a7; */
+	/* text-transform: uppercase; */
+	/* font-size: 0.6rem; */
+	/* font-weight: 700; */
+	/* margin: 0; */
+}
+
+div#field_3_4 input {
+	background: 0;
+	box-shadow: none;
+	border-bottom: 1.5px solid #b6c2ca;
+	border-radius: 0;
+	font-size: 1.6rem;
+	color: #7b96a7;
+}
+
+.ginput_container.ginput_container_product_price {
+	display: block;
+	padding: 1.2rem 2rem;
+	background: #e9e9e9;
+}
+
+input#input_3_4 {
+	width: 100%;
+	padding: 1rem !important;
+	text-align: center;
+	border: 0;
+	font-size: 2rem;
 }
