--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ Text Domain: construye-mundo
 Template: astra
 */
 
+.text-center {
+	text-align: center;
+}
+
 #secondary li {
 	line-height: 1.2 !important;
 	margin-bottom: 1rem !important;
@@ -488,8 +492,18 @@ li.destacado .sub-arrow {
 }
 
 /* Donation Form */
+.donation-form_wrapper {
+	--gform-theme-field-page-steps-number-background-color-complete: #11469f;
+	--gform-theme-color-primary: #11469f;
+}
 .donation-form_wrapper .gform-field-label {
-	margin: 0;
+	color: #071a3c;
+	font-weight: 600;
+}
+
+.donation-form_wrapper [id^="gform_fields"] {
+	column-gap: 1.2rem;
+	row-gap: 1.2rem;
 }
 
 .donation-form_wrapper .gchoice {
@@ -498,7 +512,7 @@ li.destacado .sub-arrow {
 
 .donation-form_wrapper .boxed label.gform-field-label {
 	font-weight: 700;
-	font-size: 2rem;
+	font-size: 1.7rem;
 	text-transform: uppercase;
 }
 
@@ -519,6 +533,10 @@ li.destacado .sub-arrow {
 	display: none;
 }
 
+.donation-form_wrapper .boxed .gfield_radio label {
+	margin: 0;
+}
+
 .donation-form_wrapper .boxed .gfield_radio .gform-field-label {
 	padding: 1rem;
 	text-align: center;
@@ -537,46 +555,116 @@ li.destacado .sub-arrow {
 	color: #11469f !important;
 }
 
-fieldset#field_3_3 {
-	grid-row: 1;
-	grid-column: 1 / -1;
+.donation-form_wrapper #input_3_4 {
+	box-shadow: none !important;
+	border: none !important;
+	border-radius: 0 !important;
+	font-size: 1.7rem !important;
+	color: #7b96a7 !important;
+	min-height: 4rem !important;
+	background: #e9e9e9 !important;
+	text-align: center !important;
+	width: 100% !important;
+	font-weight: 600 !important;
 }
 
-div#field_3_4 {
-	grid-row: 1;
-	grid-column: -4 / -1;
-	/* background: #e9e9e9; */
-	/* padding: 1rem 2rem 10px; */
+.donation-form_wrapper .gform_required_legend {
+	display: none;
 }
 
-div#field_3_4 label {
-	/* justify-content: center; */
-	/* color: #7b96a7; */
-	/* text-transform: uppercase; */
-	/* font-size: 0.6rem; */
-	/* font-weight: 700; */
-	/* margin: 0; */
+.donation-form_wrapper #gf_page_steps_3,
+.gform_page_footer {
+	justify-content: center;
 }
 
-div#field_3_4 input {
-	background: 0;
-	box-shadow: none;
-	border-bottom: 1.5px solid #b6c2ca;
-	border-radius: 0;
-	font-size: 1.6rem;
-	color: #7b96a7;
+.donation-form_wrapper #gf_page_steps_3 {
+	margin-bottom: 2rem;
 }
 
-.ginput_container.ginput_container_product_price {
-	display: block;
-	padding: 1.2rem 2rem;
-	background: #e9e9e9;
+.donation-form_wrapper .gform_page_footer [type="button"],
+.donation-form_wrapper .gform_page_footer [type="submit"] {
+	padding: 15px 19px !important;
+	font-weight: 700 !important;
+	font-size: 1rem !important;
+	line-height: 1em !important;
+	border-radius: 0 !important;
+	color: #ffffff !important;
+	background: #11469f !important;
+	border: 2px solid #11469f !important;
+	box-shadow: none !important;
 }
 
-input#input_3_4 {
-	width: 100%;
-	padding: 1rem !important;
+.donation-form_wrapper .gform_page_footer [type="button"]:hover,
+.donation-form_wrapper .gform_page_footer [type="submit"]:hover {
+	color: #000000 !important;
+	background: #ffffff !important;
+	border-color: #000000 !important;
+}
+
+.donation-form_wrapper [type="text"],
+.donation-form_wrapper [type="email"],
+.donation-form_wrapper [type="tel"] {
+	color: #666 !important;
+	background: #e9e9e9 !important;
+	border: none !important;
+	width: 100% !important;
+	border-radius: 0 !important;
+}
+
+#gform_confirmation_wrapper_3 .gform_confirmation_message {
 	text-align: center;
-	border: 0;
-	font-size: 2rem;
+	font-size: 1.3rem;
+	color: #11469f;
+}
+
+@media screen and (max-width: 640px) {
+	.donation-form_wrapper [id^="gform_fields"] {
+		column-gap: 0.8rem;
+		row-gap: 0.8rem;
+	}
+
+	.donation-form_wrapper .boxed .gfield_radio {
+		gap: 0.8rem;
+	}
+
+	.donation-form_wrapper .boxed .gfield_radio .gform-field-label {
+		padding: 0.5rem;
+		font-size: 1rem;
+		height: 100%;
+	}
+
+	.donation-form_wrapper #field_3_29.boxed .gfield_radio {
+		flex-wrap: wrap;
+	}
+	.donation-form_wrapper #field_3_29.boxed .gfield_radio .gchoice {
+		flex-basis: 31%;
+	}
+
+	.donation-form_wrapper #input_3_4 {
+		font-size: 1.2rem !important;
+		min-height: 0 !important;
+	}
+
+	.donation-form_wrapper .gf_step_label {
+		font-size: 0.8rem;
+		text-transform: capitalize;
+	}
+
+	.donation-form_wrapper .gf_page_steps {
+		gap: 0.8em;
+	}
+
+	.donation-form_wrapper .gf_step {
+		gap: 0.5em;
+	}
+
+	.donation-form_wrapper .gf_step_number,
+	.donation-form_wrapper .gf_step_completed .gf_step_number::after {
+		border-width: 1px;
+		padding: 0;
+		height: 2em;
+		font-size: 0.7rem;
+		min-inline-size: 0;
+		inline-size: 2em;
+	}
 }
